[package]
name = "perf-checkup"
version = "0.1.0"
authors = ["leo60228 <iakornfeld@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.2.0"
lazy_static = "1.3.0"
snafu = "0.4.3"
runtime = "0.3.0-alpha.6"
heim = "0.0.5"
derive_more = "0.15.0"
notify-rust = "3.6.0"
futures-preview = "0.3.0-alpha.17"
